--- a/app/templates/app_header.html
+++ b/app/templates/app_header.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <div class="container">
-            <a href="http://www.eloque.com" target="_blank">
+            <a href="http://app" target="_blank">
                 <img src="/app/static/logo-fba.png" style="height: 60px; padding-top: 11px; padding-left: 24px;" />
             </a>
             <h1 class="logo">Forms FBA - {{session['environment_title']}}</h1>
