--- a/app/templates/jinja/dis-as-built-dis.jinja
+++ b/app/templates/jinja/dis-as-built-dis.jinja
@@ -1,16 +1,16 @@
 Deployment
-Eloque ID,{{data.eloque_id}},
+Index ID{{data.index_id}},
 Asset ID,{{data.asset_id}},
 Sharepoint Name,{{data.sharepoint_name}},
 Excel Version,1.1.0,
-Bridge,{{data.bridge_name}},
+Asset,{{data.asset_name}},
 RSA structure number,{{data.structure_id}},
 Type,Type,
-FiBridge Type,{% for c in data.classification %}{{c}} {% endfor %},
+FiAsset Type,{% for c in data.classification %}{{c}} {% endfor %},
 Number of Spans,{{data.totalSpans}},
 Deck Width (m),{{data.deckWidth}},
-FiBridge Status,Status,
-FiBridge Built,Build Date,
+FiAsset Status,Status,
+FiAsset Built,Build Date,
 Coordinates,{{data.coordinates_latitude}},{{data.coordinates_longitude}}
 Feature crossed,{{data.feature_crossed}},
 Road name,{{data.road_name}},
