--- a/app/templates/jinja/dis-as-design.jinja
+++ b/app/templates/jinja/dis-as-design.jinja
@@ -1,10 +1,10 @@
 {
     "data": {
         "structure_id": "{{data.structure_id}}",
-        "bridge_name": "{{data.bridge_name}}",
-        "fibridge-status": "{{data.fibridge_status}}",
-        "fibridge-built": "{% if data.fibridge_built %}data.fibridge_built[0:10]}}{% endif %}",
-        "eloque_id": "{{data.eloque_id}}",
+        "asset_name": "{{data.asset_name}}",
+        "fiasset-status": "{{data.fiasset_status}}",
+        "fiasset-built": "{% if data.fiasset_built %}data.fiasset_built[0:10]}}{% endif %}",
+        "index_id": "{{data.index_id}}",
         "asset_id": "{{data.asset_id}}",
         "sharepoint_name": "{{data.sharepoint_name}}",
         "classification": [{% for c in data.classification %}"{{c}}"{%if not loop.last %},{% endif %}{% endfor %}],
