--- a/app/templates/jinja/patch-submissions.jinja
+++ b/app/templates/jinja/patch-submissions.jinja
@@ -11,8 +11,8 @@
   {% endfor %}  
   {
   	"op": "replace",
-  	"path": "/data/bridge_name",
-  	"value": "{{data.bridge_name}}"
+  	"path": "/data/asset_name",
+  	"value": "{{data.asset_name}}"
   },   
   {
   	"op": "replace",
