--- a/app/templates/jinja/dis-as-design-rcs.jinja
+++ b/app/templates/jinja/dis-as-design-rcs.jinja
@@ -1,7 +1,7 @@
-DELETE FROM transpara.transpara_groups WHERE site_id = 'app' AND eloque_id = '{{data.structure_id}}';
-INSERT INTO transpara.transpara_groups (metaid, parent_metaid, name, description, display_order, asset_type, latitude, longitude, site_id, eloque_id)
+DELETE FROM transpara.transpara_groups WHERE site_id = 'app' AND index_id = '{{data.structure_id}}';
+INSERT INTO transpara.transpara_groups (metaid, parent_metaid, name, description, display_order, asset_type, latitude, longitude, site_id, index_id)
 VALUES
-('{{data.structure_id}}', 'DoT', '{{data.structure_id[0:2]}} {{data.structure_id[2:]}}', 'Bridge {{data.eloque_id}} - {{data.bridge_name}}', {{data.structure_id[2:]}}, '{% for c in data.classification %}{{c}} {% endfor %}', '{{data.coordinates_latitude}}', '{{data.coordinates_longitude}}', 'app', '{{data.structure_id}}'),
+('{{data.structure_id}}', 'DoT', '{{data.structure_id[0:2]}} {{data.structure_id[2:]}}', 'Asset {{data.index_id}} - {{data.asset_name}}', {{data.structure_id[2:]}}, '{% for c in data.classification %}{{c}} {% endfor %}', '{{data.coordinates_latitude}}', '{{data.coordinates_longitude}}', 'app', '{{data.structure_id}}'),
 {% set ns = namespace(items=0) %}
 {% set ns.parent = '' %}
 {% set ns.order = 2 %}
@@ -19,15 +19,15 @@ VALUES
 ('{{data.structure_id}}:{{ns.parent}}', '{{data.structure_id}}', '{{data.structure_id}}:{{ns.parent}}', '{{data.structure_id}} - {% if f.componentId[:1] == 'S'%}Span{% elif f.componentId[:1] == 'A' %}Abutment{% else %}Pier{% endif %} {{f.componentId[1:3]}}', {{ns.order}}, '', 0, 0, 'app', '{{data.structure_id}}'),
         {% endif %}
 ('{{data.structure_id}}:{{f.componentId}}', '{{ns.parent_metaid}}', '{{data.structure_id}}:{{f.componentId}}', '{{data.structure_id}} - {% if f.componentId[:1] == 'S' %}Span{% else %}Pier{% endif %} {{f.componentId[1:3]}} - {% if f.componentId[3:4] == 'G' %}Girder{% elif f.componentId[3:5] == 'CR' %}Crosshead{% else %}Column{% endif %} {{f.componentId[-2:]}}', {{ns.order}}, '', 0, 0, 'app', '{{data.structure_id}}'),
-('{{data.structure_id}}:{{f.componentId}}:Strain', '{{data.structure_id}}:{{f.componentId}}', 'Strain', 'Bridge {{data.structure_id}} - Strain', 2, '', 0, 0, 'app', '{{data.structure_id}}')
+('{{data.structure_id}}:{{f.componentId}}:Strain', '{{data.structure_id}}:{{f.componentId}}', 'Strain', 'Asset {{data.structure_id}} - Strain', 2, '', 0, 0, 'app', '{{data.structure_id}}')
         {% set ns.firstGroup = True %}
         {% set ns.order = ns.order + 1 %}
     {% endif %}
 {% endfor %};
 
-DELETE FROM transpara.transpara_kpis WHERE site_id = 'app' AND eloque_id = '{{data.structure_id}}';
+DELETE FROM transpara.transpara_kpis WHERE site_id = 'app' AND index_id = '{{data.structure_id}}';
 INSERT INTO transpara.transpara_kpis
-(metaid, parent_metaid, name, description, display_order, min, lll, ll, l, actual, actual_interface, target, h, hh, hhh, max, groupmap_position, bridge, abutment, span, girder, fibre, sensor, latitude, longitude, site_id, eloque_id, status)
+(metaid, parent_metaid, name, description, display_order, min, lll, ll, l, actual, actual_interface, target, h, hh, hhh, max, groupmap_position, asset, abutment, span, girder, fibre, sensor, latitude, longitude, site_id, index_id, status)
 VALUES
 {% set ns.order = 1 %}
 {% for f in ['F01','F02','F03','F04','F05','F06','F07','F08','F09','F10','F11','F12','F13','F14','F15'] %}
