--- a/app/templates/jinja/initial-mapping.jinja
+++ b/app/templates/jinja/initial-mapping.jinja
@@ -1,9 +1,9 @@
 {
     "data": {
         "structure_id": "{{data.structure_id}}",
-        "bridge_name": "{{data.bridge_name}}",
-        "eloque_id": "{{data.eloque_id}}",
-        "eloque_id2": "{{data.eloque_id}}",
+        "asset_name": "{{data.asset_name}}",
+        "index_id": "{{data.index_id}}",
+        "index_id2": "{{data.index_id}}",
         "asset_id": "{{data.asset_id}}",
         "sharepoint_name": "{{data.sharepoint_name}}",
         "classification": [{% for c in data.classification %}"{{c}}"{%if not loop.last %},{% endif %}{% endfor %}],
