--- a/app/templates/jinja/mapping-design-rcs.jinja
+++ b/app/templates/jinja/mapping-design-rcs.jinja
@@ -1,21 +1,21 @@
-DELETE FROM transpara.transpara_groups WHERE site_id = 'ops' AND eloque_id = '{{data.structure_id}}';
-INSERT INTO transpara.transpara_groups (metaid, parent_metaid, name, description, display_order, asset_type, latitude, longitude, site_id, eloque_id)
+DELETE FROM transpara.transpara_groups WHERE site_id = 'ops' AND index_id = '{{data.structure_id}}';
+INSERT INTO transpara.transpara_groups (metaid, parent_metaid, name, description, display_order, asset_type, latitude, longitude, site_id, index_id)
 VALUES
 {% set ns = namespace(items=0) %}
 {% set ns.order = 1 %}
-('{{data.structure_id}}', null, '{{data.structure_id[0:2]}} {{data.structure_id[2:]}}', 'Bridge {{data.eloque_id}} - {{data.bridge_name}}', {{data.structure_id[2:]}}, '{% for c in data.classification %}{{c}} {% endfor %}', '{{data.coordinates_latitude}}', '{{data.coordinates_longitude}}', 'ops', '{{data.structure_id}}'),
+('{{data.structure_id}}', null, '{{data.structure_id[0:2]}} {{data.structure_id[2:]}}', 'Asset {{data.index_id}} - {{data.asset_name}}', {{data.structure_id[2:]}}, '{% for c in data.classification %}{{c}} {% endfor %}', '{{data.coordinates_latitude}}', '{{data.coordinates_longitude}}', 'ops', '{{data.structure_id}}'),
 {% set ns.order = ns.order + 1 %}
-('{{data.structure_id}}:System Health', '{{data.structure_id}}', '{{data.structure_id}}: System Health', '{{data.eloque_id}} System Health', {{ns.order}}, '', 0, 0, 'ops', '{{data.structure_id}}'),
+('{{data.structure_id}}:System Health', '{{data.structure_id}}', '{{data.structure_id}}: System Health', '{{data.index_id}} System Health', {{ns.order}}, '', 0, 0, 'ops', '{{data.structure_id}}'),
 {% set ns.order = ns.order + 1 %}
 {% for f in range(data.totalFibers) %}
-('{{data.structure_id}}:Fibre {{f + 1}}', '{{data.structure_id}}', '{{data.structure_id}}:Fibre {{f + 1}}', '{{data.structure_id}} - {{data.bridge_name}} - Fibre {{f + 1}}', {{ns.order}}, '', 0, 0, 'ops', '{{data.structure_id}}'){% if not loop.last %},
+('{{data.structure_id}}:Fibre {{f + 1}}', '{{data.structure_id}}', '{{data.structure_id}}:Fibre {{f + 1}}', '{{data.structure_id}} - {{data.asset_name}} - Fibre {{f + 1}}', {{ns.order}}, '', 0, 0, 'ops', '{{data.structure_id}}'){% if not loop.last %},
     {% endif %}
     {% set ns.order = ns.order + 1 %}
 {% endfor %};
 
-DELETE FROM transpara.transpara_kpis WHERE site_id = 'ops' AND eloque_id = '{{data.structure_id}}';
+DELETE FROM transpara.transpara_kpis WHERE site_id = 'ops' AND index_id = '{{data.structure_id}}';
 INSERT INTO transpara.transpara_kpis
-  (metaid, parent_metaid, name, description, display_order, min, lll, ll, l, actual, actual_interface, target, h, hh, hhh, max, groupmap_position, bridge, abutment, span, girder, fibre, sensor, latitude, longitude, site_id, eloque_id, status)
+  (metaid, parent_metaid, name, description, display_order, min, lll, ll, l, actual, actual_interface, target, h, hh, hhh, max, groupmap_position, asset, abutment, span, girder, fibre, sensor, latitude, longitude, site_id, index_id, status)
 VALUES
 {% set ns.order = 1 %}
 ('{{data.structure_id}}:Missing Readings', '{{data.structure_id}}:System Health', '{{data.structure_id}}: Missing Readings', '{{data.structure_id}} Missing Readings in Previous Minute', {{ns.order}}, 0, 0, 0, 0, 'missing_readings|asset={{data.asset_id}}', 'tStore', 0, 1, 0, 0, 5, {{ns.order}}, '{{data.structure_id}}', '', '', '', 0, 0, 0, 0, 'ops', '{{data.structure_id}}', 'good'),
