Layout updates and backup file

--- a/app/templates/edit_submission.html
+++ b/app/templates/edit_submission.html
@@ -14,10 +14,10 @@
   </head>
   <body>
     <header>
-      <div class="container">
-        <img src="/app/static/logo-fba.png" style="height: 60px; padding-top: 11px; padding-left: 24px;" />
-        <h1 class="logo">{{keyvalue}} - {{desc}}</h1>
-      </div>
+      <a href="/app" class="h1 logo">
+        <img src="/app/static/logo-new.png" style="width:200px;" alt="Flander, Beyer and Associates P/L">
+      </a>
+      <h1 class="logo">{{keyvalue}} - {{desc}}</h1>
     </header>
 
     <div class="container" style="margin: 10px;">
