--- a/app/static/menu.css
+++ b/app/static/menu.css
@@ -9,14 +9,17 @@ body {
    */
   header {
     background-color: #1A2B45;
-    height: 75px;
+    height: 60px;
     width: 100%;
     opacity: .9;
     margin-bottom: 20px;
+    margin-left: 20px;
+    margin-right: 20px;
   }
   header h1.logo {
     margin: 0;
-    margin-top: 20px;
+    margin-top: 15px;
+    margin-right: 15px;
     font-size: 1.7em;
     color: #fff;
     float: right;
