--- a/app/templates/includes/sidenav.html
+++ b/app/templates/includes/sidenav.html
@@ -1,8 +1,11 @@
-<div class="flex-shrink-0 p-3 bg-white" style="width: 280px;">
+<div class="d-flex flex-column flex-shrink-0 p-3 bg-light overflow-auto" style="width:max-content">
+  <div>
   <a href="/app" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-white text-decoration-none">
     <img src="/app/static/logo-new.png" style="width:200px;" alt="Flander, Beyer and Associates P/L">
   </a>
   <hr>
+  </div>
+
   <ul class="list-unstyled ps-0">
 
     {% for menu in sidenav.data.menuSection %}
