--- a/app/templates/layouts/base.html
+++ b/app/templates/layouts/base.html
@@ -27,7 +27,7 @@
 
   <div class="b-example-divider"></div>
 
-  <div class="d-flex flex-column flex-shrink-0 p-3 bg-light" style="width:max-content">
+  <div class="d-flex flex-column flex-shrink-0 p-3 bg-light overflow-auto" style="width:max-content">
 
     {% block content %}{% endblock content %}
 
