update layouts and add documentation

--- a/app/templates/app_log.html
+++ b/app/templates/app_log.html
@@ -1,4 +1,4 @@
-{% extends "app_header_no_menu.html" %}
+{% extends "layouts/base-fullscreen.html" %}
 {% block content %}
     <div>
       <div class="submenu">
