--- a/app/templates/edit_reference.html
+++ b/app/templates/edit_reference.html
@@ -19,8 +19,8 @@
       </a>
       <h1 class="logo">{{keyvalue}} - {{desc}}</h1>
     </header>
-    <div class="container" style="margin: 10px;">
-      <div class="edit" style='padding: 20px'>
+    <div class="d-flex flex-column flex-shrink-0 p-3 bg-light overflow-auto" style="width:max-content">
+      <div class="container" style="margin: 10px;">
         <div id='formio'></div>
       </div>
     </div>
