--- a/app/templates/includes/sidenav.html
+++ b/app/templates/includes/sidenav.html
@@ -1,4 +1,4 @@
-<div class="d-flex flex-column flex-shrink-0 p-3 bg-light overflow-auto" style="width:max-content">
+<div class="d-flex flex-column flex-shrink-0 p-3 bg-light overflow-auto" style="width:auto">
   <div>
   <a href="/app" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-white text-decoration-none">
     <img src="/app/static/logo-new.png" style="width:200px;" alt="Flander, Beyer and Associates P/L">
@@ -6,41 +6,37 @@
   <hr>
   </div>
 
-  <ul class="list-unstyled ps-0">
 
     {% for menu in sidenav.data.menuSection %}
-    <li class="mb-1">
-      <button class="btn btn-toggle align-items-center rounded collapsed" data-bs-toggle="collapse" data-bs-target="#{{menu.sectionName | replace(' ','_')}}-collapse" aria-expanded="true">
-        {{menu.sectionName}}
-      </button>
+    <a class="bd-toc-item">
+      {{menu.sectionName}}
+    </a>
     
-      <div class="collapse" id="{{menu.sectionName | replace(' ','_')}}-collapse">
-      <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
+      <ul class="bd-sidenav">
   {% for item in menu.menuSectionItems %}
       <li>
           {% if item.menuItemType == 'resource' %}
-          <a class="link-dark rounded" href="javascript:NewTab('/app/tool/reference/{{item.menuItemForm}}','_admin')">
+          <a href="javascript:NewTab('/app/tool/reference/{{item.menuItemForm}}','_admin')">
           {% endif %}
           {% if item.menuItemType == 'view' %}
-          <a class="link-dark rounded" href="javascript:NewTab('/app/view/{{item.menuItemView}}','_admin')">
+          <a href="javascript:NewTab('/app/view/{{item.menuItemView}}','_admin')">
           {% endif %}
           {% if item.menuItemType == 'url' %}
-          <a class="link-dark rounded" href="javascript:NewWindow('{{item.menuItemUrl}}','_admin')">
+          <a href="javascript:NewWindow('{{item.menuItemUrl}}','_admin')">
           {% endif %}
           {% if item.menuItemType == 'tool' %}
-          <a class="link-dark rounded" href="javascript:NewTab('/app/tool/{{item.menuItemTool}}','_admin')">
+          <a href="javascript:NewTab('/app/tool/{{item.menuItemTool}}','_admin')">
           {% endif %}
           {% if item.menuItemType == 'edit' %}
-          <a class="link-dark rounded" href="javascript:NewWindow('../edit/reference/{{item.menuItemForm}}/{{item.menuItemTool}}','_admin')">
+          <a href="javascript:NewWindow('../edit/reference/{{item.menuItemForm}}/{{item.menuItemTool}}','_admin')">
           {% endif %}
-          <span>{{item.menuItemLabel}}</span>
+          {{item.menuItemLabel}}
           </a>
       </li>
     {% endfor %}
       </ul>
-      </div>
-    </li>
   {% endfor %}
+  <ul class="list-unstyled ps-0">
     <li class="border-top my-3"></li>
     <li class="mb-1">
       <button class="btn btn-toggle align-items-center rounded collapsed" data-bs-toggle="collapse" data-bs-target="#account-collapse" aria-expanded="false">
@@ -48,9 +44,9 @@
       </button>
       <div class="collapse" id="account-collapse">
         <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
-          <li><a class="link-dark rounded" href="/app/profile.html">Profile</a></li>
-          <li><a class="link-dark rounded" href="/app/edit/change-password/xxx" target="_blank">Change Password</a></li>
-          <li><a class="link-dark rounded" href="/app/logout">Sign out</a></li>
+          <li><a href="/app/profile.html">Profile</a></li>
+          <li><a href="/app/edit/change-password/xxx" target="_blank">Change Password</a></li>
+          <li><a href="/app/logout">Sign out</a></li>
             </ul>
       </div>
     </li>
