--- a/app/templates/home/profile.html
+++ b/app/templates/home/profile.html
@@ -9,16 +9,9 @@
 
 {% block content %}
 
-<div class="card">
+<div class="card col-12">
   <div class="card-header">
-    <div class="row align-items-center">
-      <div class="col-8">
-        <h3 class="mb-0">Edit profile </h3>
-      </div>
-      <div class="col-4 text-right">
-        <a href="#!" class="btn btn-sm btn-primary">Settings</a>
-      </div>
-    </div>
+    <h4 class="mb-0">Edit profile </h4>
   </div>
   <div class="card-body"id='formio'></div>
 </div>
