--- a/app/templates/edit_reference.html
+++ b/app/templates/edit_reference.html
@@ -13,16 +13,18 @@
       <title>Tools - Update Reference</title>
   </head>
   <body>
-    <header>
-      <a href="/app" class="h1 logo">
-        <img src="/app/static/logo-new.png" style="width:200px;" alt="Flander, Beyer and Associates P/L">
-      </a>
-      <h1 class="logo">{{keyvalue}} - {{desc}}</h1>
-    </header>
-    <div class="d-flex flex-column flex-shrink-0 p-3 bg-light overflow-auto" style="width:max-content">
-      <div class="container" style="margin: 10px;">
-        <div id='formio'></div>
-      </div>
-    </div>
+    <nav class="navbar navbar-top navbar-expand navbar-dark bg-primary border-bottom d-flex justify-content-between p-3">
+      <div>
+        <a href="/app">
+          <img src="/app/static/logo-new.png" style="width:200px;" alt="Flander, Beyer and Associates P/L">
+        </a>
+        </div>
+      <div class="text-white" style="font-size: 2rem">{{keyvalue}} - {{desc}}</div>
+  </nav>
+
+  <div class="d-flex flex-column flex-shrink-0 p-3 bg-light overflow-auto" style="width:max-content">
+    <div class="container" style="margin: 10px;">
+      <div id='formio'></div>
+  </div>
   </body>
 </html>
