--- a/app/templates/layouts/base-fullscreen.html
+++ b/app/templates/layouts/base-fullscreen.html
@@ -4,7 +4,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  
+  <link rel='stylesheet' href='https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css'>
+
   <title>
     FormsWorking {% block title %}{% endblock %}
   </title>
@@ -14,7 +15,16 @@
 
 </head>
 
-<body class="bg-default">
+<body>
+
+  <nav class="navbar navbar-top navbar-expand navbar-dark bg-primary border-bottom d-flex justify-content-between p-3">
+    <div>
+      <a href="/app">
+        <img src="/app/static/logo-new.png" style="width:200px;" alt="Flander, Beyer and Associates P/L">
+      </a>
+      </div>
+    <div class="text-white" style="font-size: 2rem">FormsWorking -- Login</div>
+  </nav>
 
   <div class="main-content">
 
@@ -29,7 +39,7 @@
               </h1>
               <p class="text-lead text-light">
                 Open-Source Application Platform
-                Coded by <a target="_blank" class="text-white" href="https://appseed.us">FBA</a>.  
+                Coded by FBA</a>.  
               </p>
             </div>
           </div>
