--- a/app/templates/layouts/base.html
+++ b/app/templates/layouts/base.html
@@ -22,16 +22,19 @@
 </head>
 
 <body class="">
+  {% include "includes/navigation.html" %}
+
   <main>
-  {% include "includes/sidenav.html" %}
 
-  <div class="b-example-divider"></div>
+    {% include "includes/sidenav.html" %}
 
-  <div class="d-flex flex-column flex-shrink-0 p-3 bg-light overflow-auto" style="width:max-content">
+    <div class="b-example-divider"></div>
+    
+    <div class="d-flex flex-column flex-shrink-0 p-3 bg-light overflow-auto" style="width:max-content">
 
     {% block content %}{% endblock content %}
 
-  </div>
+    </div>
   </main>
   
   {% include "includes/scripts.html" %}
