--- a/app/templates/edit_submission.html
+++ b/app/templates/edit_submission.html
@@ -1,9 +1,14 @@
 <!-- http://54.252.242.116:8000/static/example.html -->
 <html>
   <head>
+
+    <!-- Favicon - loaded as static -->
+    <link rel="icon" href="/app/static/favicon.ico" type="image/ico">
+
     <link rel='stylesheet' href='https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css'>
     <link rel='stylesheet' href='https://cdn.form.io/formiojs/formio.full.min.css'>
     <link rel="stylesheet" href="/app/static/menu.css">
+
     <script src='https://cdn.form.io/formiojs/formio.full.min.js'></script>
     <script type='text/javascript'>
      window.onload = function() {
