--- a/app/templates/includes/sidenav.html
+++ b/app/templates/includes/sidenav.html
@@ -20,7 +20,7 @@
           <a href="javascript:NewTab('/app/tool/{{item.menuItemTool}}','_admin')">
           {% endif %}
           {% if item.menuItemType == 'edit' %}
-          <a href="javascript:NewWindow('../edit/reference/{{item.menuItemForm}}/{{item.menuItemTool}}','_admin')">
+          <a href="javascript:NewWindow('../../edit/reference/{{item.menuItemForm}}/{{item.menuItemTool}}','_admin')">
           {% endif %}
           {{item.menuItemLabel}}
           </a>
