--- a/app/templates/layouts/base-fullscreen.html
+++ b/app/templates/layouts/base-fullscreen.html
@@ -10,6 +10,9 @@
     FormsWorking {% block title %}{% endblock %}
   </title>
 
+  <!-- Favicon - loaded as static -->
+  <link rel="icon" href="/app/static/favicon.ico" type="image/ico">
+
   <!-- Specific CSS goes HERE -->
   {% block stylesheets %}{% endblock stylesheets %}
 
