--- a/app/templates/layouts/base.html
+++ b/app/templates/layouts/base.html
@@ -9,6 +9,9 @@
     FormsWorking - {% block title %}{% endblock %}
   </title>
 
+  <!-- Favicon - loaded as static -->
+  <link rel="icon" href="/app/static/favicon.ico" type="image/ico">
+
   <!-- Page plugins -->
   <link rel='stylesheet' href='https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css'>
   <link rel="stylesheet" href="/app/static/dis_menu.css">
