Add Help on Account and Icons to menus

--- a/app/templates/includes/navigation.html
+++ b/app/templates/includes/navigation.html
@@ -27,13 +27,20 @@
           </a>
           <div class="dropdown-menu  dropdown-menu-right " id="account-collapse-1">
             <a href="/app/profile.html" class="dropdown-item">
+              <i class="bi bi-person-circle" style="font-size: 2rem"></i>
               <span>Your profile</span>
             </a>
             <a target="_blank" href="/app/edit/change-password/xxx" class="dropdown-item">
+              <i class="bi bi-fingerprint" style="font-size: 2rem"></i>
               <span>Change Password</span>
+            </a>
+            <a target="_blank" href="/app/doc/manual-index" class="dropdown-item">
+              <i class="bi bi-question" style="font-size: 2rem"></i>
+              <span>Help</span>
             </a>
             <div class="dropdown-divider"></div>
             <a href="/app/logout" class="dropdown-item">
+              <i class="bi bi-box-arrow-left" style="font-size: 2rem"></i>
               <span>Logout</span>
             </a>
           </div>
