--- a/app/templates/includes/sidenav.html
+++ b/app/templates/includes/sidenav.html
@@ -2,8 +2,9 @@
   <a class="bd-toc-item">
     DASHBOARDS
   </a>
-  <ul class="bd-sidenav">
-      <li><a href="javascript:NewTab('/app','_admin')">Profile</a></li>
+  <ul style="list-style-type: none; padding-left: 10px;">
+      <li><a href="javascript:NewTab('/app','_admin')">
+        <i class="bi bi-speedometer2" style="font-size: 1rem; color: black"></i>&nbsp;Profile</a></li>
   </ul>
 
   {% for menu in sidenav.data.menuSection %}
@@ -11,22 +12,27 @@
       {{menu.sectionName | upper}}
     </a>
     
-    <ul class="bd-sidenav">
+    <ul style="list-style-type: none; padding-left: 10px;">
     {% for item in menu.menuSectionItems %}
       {% if item.menuItemType == 'resource' and item.menuItemForm in form_access %}
-      <li><a href="javascript:NewTab('/app/tool/reference/{{item.menuItemForm}}','_admin')">{{item.menuItemLabel}}</a></li>
+      <li><a href="javascript:NewTab('/app/tool/reference/{{item.menuItemForm}}','_admin')">
+        <i class="bi bi-card-list" style="font-size: 1rem; color: black"></i>&nbsp;{{item.menuItemLabel}}</a></li>
       {% endif %}
       {% if item.menuItemType == 'view' and item.menuItemView in view_access %}
-      <li><a href="javascript:NewTab('/app/view/{{item.menuItemView}}','_admin')">{{item.menuItemLabel}}</a></li>
+      <li><a href="javascript:NewTab('/app/view/{{item.menuItemView}}','_admin')">
+        <i class="bi bi-list-columns" style="font-size: 1rem; color: black"></i>&nbsp;{{item.menuItemLabel}}</a></li>
       {% endif %}
       {% if item.menuItemType == 'url' %}
-      <li><a href="javascript:NewWindow('{{item.menuItemUrl}}','_admin')">{{item.menuItemLabel}}</a></li>
+      <li><a href="javascript:NewWindow('{{item.menuItemUrl}}','_admin')">
+        <i class="bi bi-box-arrow-up-right" style="font-size: 1rem; color: black"></i>&nbsp;{{item.menuItemLabel}}</a></li>
       {% endif %}
       {% if item.menuItemType == 'tool' %}
-      <li><a href="javascript:NewTab('/app/tool/{{item.menuItemTool}}','_admin')">{{item.menuItemLabel}}</a></li>
+      <li><a href="javascript:NewTab('/app/tool/{{item.menuItemTool}}','_admin')">
+        <i class="bi bi-card-list" style="font-size: 1rem; color: black"></i>&nbsp;{{item.menuItemLabel}}</a></li>
       {% endif %}
       {% if item.menuItemType == 'edit' and item.menuItemForm in form_access %}
-      <li><a href="javascript:NewWindow('/app/edit/reference/{{item.menuItemForm}}/{{item.menuItemTool}}','_admin')">{{item.menuItemLabel}}</a></li>
+      <li><a href="javascript:NewWindow('/app/edit/reference/{{item.menuItemForm}}/{{item.menuItemTool}}','_admin')">
+        <i class="bi bi-layout-text-sidebar-reverse" style="font-size: 1rem; color: black"></i>&nbsp;{{item.menuItemLabel}}</a></li>
       {% endif %}
     {% endfor %}
     </ul>
