--- a/app/templates/layouts/base.html
+++ b/app/templates/layouts/base.html
@@ -11,6 +11,8 @@
 
   <!-- Favicon - loaded as static -->
   <link rel="icon" href="/app/static/favicon.ico" type="image/ico">
+  <!-- Bootstrap Icons library -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
 
   <!-- Page plugins -->
   <link rel='stylesheet' href='https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css'>
