change index_id -> eloque_id + /app

--- a/app/templates/jinja/dis-as-built-dis.jinja
+++ b/app/templates/jinja/dis-as-built-dis.jinja
@@ -1,5 +1,5 @@
 Deployment
-Index ID{{data.index_id}},
+Index ID{{data.eloque_id}},
 Asset ID,{{data.asset_id}},
 Sharepoint Name,{{data.sharepoint_name}},
 Excel Version,1.1.0,
