--- a/app/templates/jinja/dis-builder-as-design.jinja
+++ b/app/templates/jinja/dis-builder-as-design.jinja
@@ -4,7 +4,7 @@
         "asset_name": "{{data.asset_name}}",
         "fiasset-status": "{{data.fiasset_status}}",
         "fiasset-built": "{% if data.fiasset_built %}data.fiasset_built[0:10]}}{% endif %}",
-        "index_id": "{{data.index_id}}",
+        "eloque_id": "{{data.eloque_id}}",
         "asset_id": "{{data.asset_id}}",
         "sharepoint_name": "{{data.sharepoint_name}}",
         "classification": {% for c in data.classification %}{{c}} {% endfor %},
