--- a/app/templates/jinja/patch-overview.jinja
+++ b/app/templates/jinja/patch-overview.jinja
@@ -1,7 +1,7 @@
 [
   {
   	"op": "replace",
-  	"path": "/data/index_id2",
-  	"value": "{{data.index_id}}"
+  	"path": "/data/eloque_id2",
+  	"value": "{{data.eloque_id}}"
   }
 ]
