--- a/app/templates/jinja/template_v2.0.jinja
+++ b/app/templates/jinja/template_v2.0.jinja
@@ -1,7 +1,7 @@
 {
     "excel-version": "{{data.json_template}}",
     "asset": {
-        "type": "{{data.index_id}}",
+        "type": "{{data.eloque_id}}",
         "classification": "{% for c in data.classification %}{{c}} {% endfor %}",
         "fiasset-status": "{{data.fiasset_status}}",
         "fiasset-built": "{{data.fiasset_built[0:10]}}",
