--- a/app/templates/jinja/template_v2.1.jinja
+++ b/app/templates/jinja/template_v2.1.jinja
@@ -3,7 +3,7 @@
     {% set ns.component_type = {} %}
     "excel-version": "0.2.0",
     "asset": {
-        "type": "{{data.index_id}}",
+        "type": "{{data.eloque_id}}",
         "classification": "{% for c in data.classification %}{{c}} {% endfor %}",
         "name": "{{data.asset_name}}",
         "RSA structure number": "{{data.structure_id}}",
