--- a/app/templates/loginx.html
+++ b/app/templates/loginx.html
@@ -73,7 +73,7 @@
     <title>FormsFBA - Login</title>
     <header>
       <div class="container">
-      <img src="/app/static/logo-fba.png" style="height: 60px; padding-top: 11px; padding-left: 24px;" />
+      <img src="/app/static/logo-new.png" style="height: 60px; padding-top: 11px; padding-left: 24px;" />
       <h1 class="logo">FormsFBA Login - {{session['environment_title']}}</h1>
       </div>
       </header>
