--- a/app/templates/app_header.html
+++ b/app/templates/app_header.html
@@ -13,7 +13,7 @@
     <header>
         <div class="container">
             <a href="http://app" target="_blank">
-                <img src="/app/static/logo-fba.png" style="height: 60px; padding-top: 11px; padding-left: 24px;" />
+                <img src="/app/static/logo-new.png" style="height: 60px; padding-top: 11px; padding-left: 24px;" />
             </a>
             <h1 class="logo">Forms FBA - {{session['environment_title']}}</h1>
             <strong><nav>
