--- a/app/templates/jinja/dis-as-built-layout.jinja
+++ b/app/templates/jinja/dis-as-built-layout.jinja
@@ -1,27 +1,27 @@
 <html>
 <head>
-    <title>DIS: As-Built Layout {{data.index_id}}</title>
-    <link rel="stylesheet" href="/designer/static/dis_menu.css">
-    <script type="text/javascript" charset="utf8" src="/designer/static/jquery-3.6.0.min.js"></script>
+    <title>DIS: As-Built Layout {{data.eloque_id}}</title>
+    <link rel="stylesheet" href="/app/static/dis_menu.css">
+    <script type="text/javascript" charset="utf8" src="/app/static/jquery-3.6.0.min.js"></script>
     <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/v/dt/dt-1.11.3/datatables.min.css"/>
     <script type="text/javascript" src="https://cdn.datatables.net/v/dt/dt-1.11.3/datatables.min.js"></script>
-    <script type="text/javascript" charset="utf8" src="/designer/static/svg_lib.js"></script>
-    <script type="text/javascript" charset="utf8" src="/designer/static/std_lib.js"></script>
+    <script type="text/javascript" charset="utf8" src="/app/static/svg_lib.js"></script>
+    <script type="text/javascript" charset="utf8" src="/app/static/std_lib.js"></script>
 </head>
 <body>
     <header>
         <div class="container">
             <a href="/app">
-                <img src="/designer/static/logo.png" style="height: 53px; padding-top: 11px; padding-left: 24px;" />
+                <img src="/app/static/logo-new.png" style="height: 53px; padding-top: 11px; padding-left: 24px;" />
             </a>
-            <h1 class="logo"> {{data.index_id}} - DIS: As-Built</h1>
+            <h1 class="logo"> {{data.eloque_id}} - DIS: As-Built</h1>
         </div>
     </header>
     {% set ns = namespace(items=0) %}
 
     <h1>Deployment</h1>
     <table>
-        <tr><td>Index ID</td><td>{{data.index_id}}</td><td></td></tr>
+        <tr><td>Index ID</td><td>{{data.eloque_id}}</td><td></td></tr>
         <tr><td>Asset ID</td><td>{{data.asset_id}}</td><td></td></tr>
         <tr><td>Sharepoint Name</td><td>{{data.sharepoint_name}}</td><td></td></tr>
         <tr><td>Excel Version</td><td>1.1.0</td><td></td></tr>
