--- a/app/templates/jinja/dis-as-built-rcs.jinja
+++ b/app/templates/jinja/dis-as-built-rcs.jinja
@@ -1,7 +1,7 @@
-DELETE FROM transpara.transpara_groups WHERE site_id = 'app' AND index_id = '{{data.structure_id}}';
-INSERT INTO transpara.transpara_groups (metaid, parent_metaid, name, description, display_order, asset_type, latitude, longitude, site_id, index_id)
+DELETE FROM transpara.transpara_groups WHERE site_id = 'app' AND eloque_id = '{{data.structure_id}}';
+INSERT INTO transpara.transpara_groups (metaid, parent_metaid, name, description, display_order, asset_type, latitude, longitude, site_id, eloque_id)
 VALUES
-('{{data.structure_id}}', 'DoT', '{{data.structure_id[0:2]}} {{data.structure_id[2:]}}', 'Asset {{data.index_id}} - {{data.asset_name}}', {{data.structure_id[2:]}}, '{% for c in data.classification %}{{c}} {% endfor %}', '{{data.coordinates_latitude}}', '{{data.coordinates_longitude}}', 'app', '{{data.structure_id}}'),
+('{{data.structure_id}}', 'DoT', '{{data.structure_id[0:2]}} {{data.structure_id[2:]}}', 'Asset {{data.eloque_id}} - {{data.asset_name}}', {{data.structure_id[2:]}}, '{% for c in data.classification %}{{c}} {% endfor %}', '{{data.coordinates_latitude}}', '{{data.coordinates_longitude}}', 'app', '{{data.structure_id}}'),
 {% set ns = namespace(items=0) %}
 {% set ns.parent = '' %}
 {% set ns.order = 2 %}
@@ -17,9 +17,9 @@ VALUES
 {% set ns.order = ns.order + 1 %}
 {% endfor %};
 
-DELETE FROM transpara.transpara_kpis WHERE site_id = 'app' AND index_id = '{{data.structure_id}}';
+DELETE FROM transpara.transpara_kpis WHERE site_id = 'app' AND eloque_id = '{{data.structure_id}}';
 INSERT INTO transpara.transpara_kpis
-(metaid, parent_metaid, name, description, display_order, min, lll, ll, l, actual, actual_interface, target, h, hh, hhh, max, groupmap_position, asset, abutment, span, girder, fibre, sensor, latitude, longitude, site_id, index_id, status)
+(metaid, parent_metaid, name, description, display_order, min, lll, ll, l, actual, actual_interface, target, h, hh, hhh, max, groupmap_position, asset, abutment, span, girder, fibre, sensor, latitude, longitude, site_id, eloque_id, status)
 VALUES
 {% set ns.order = 1 %}
 {% for f in ['F01','F02','F03','F04','F05','F06','F07','F08','F09','F10','F11','F12','F13','F14','F15'] %}
@@ -28,7 +28,7 @@ VALUES
   {% endif %}
     {% set fiber = data[f] %}
     {% for s in fiber %}
-('{{data.structure_id}}:Strain:{{s.component_id}},S{{s.sensor}}', '{{data.structure_id}}:{{s.component_id}}:Strain', '{{data.structure_id}}:Strain {{s.component_id}},R{{s.sensor}}', '{{data.structure_id}} - Fibre {{s.fiber[2:]}} - Sensor {{s.sensor}}', {{ns.order}}, 1500, 0, 0, 0, '<[wavelength_shift|asset={{data.index_id}},fiber={{s.fiber[2:]}},sensor={{s.sensor}}]/1.331>', 'tStore', 0, 0, 0, 0, 1600, {{ns.order}}, '{{data.structure_id}}', '', '', '', 0, 0, 0, 0, 'app', '{{data.structure_id}}', 'good'){% if not loop.last%},
+('{{data.structure_id}}:Strain:{{s.component_id}},S{{s.sensor}}', '{{data.structure_id}}:{{s.component_id}}:Strain', '{{data.structure_id}}:Strain {{s.component_id}},R{{s.sensor}}', '{{data.structure_id}} - Fibre {{s.fiber[2:]}} - Sensor {{s.sensor}}', {{ns.order}}, 1500, 0, 0, 0, '<[wavelength_shift|asset={{data.eloque_id}},fiber={{s.fiber[2:]}},sensor={{s.sensor}}]/1.331>', 'tStore', 0, 0, 0, 0, 1600, {{ns.order}}, '{{data.structure_id}}', '', '', '', 0, 0, 0, 0, 'app', '{{data.structure_id}}', 'good'){% if not loop.last%},
             {% endif %}
         {% set ns.order = ns.order + 1 %}
     {% endfor %}
