--- a/app/templates/jinja/mapping-design-dis.jinja
+++ b/app/templates/jinja/mapping-design-dis.jinja
@@ -1,5 +1,5 @@
 Deployment
-Index ID{{data.index_id}},
+Index ID{{data.eloque_id}},
 Asset ID,{{data.asset_id}},
 Sharepoint Name,{{data.sharepoint_name}},
 Excel Version,1.1.0,
